10 April 2013: Wouter
	- code improve for minimal responses, small speed increase.

9 April 2013: Wouter
	- updated iana portlist.
	- Fix crash in previous private address fixup of 22 March.

28 March 2013: Wouter
	- Make reverse zones easier by documenting the nodefault statements
	  commented-out in the example config file.

26 March 2013: Wouter
	- more fixes to lookup3.c endianness detection.

25 March 2013: Wouter
	- #492: Fix endianness detection, revert to older lookup3.c detection
	  and put new detect lines after previous tests, to avoid regressions
	  but allow new detections to succeed.
	  And add detection for machine/endian.h to it.

22 March 2013: Wouter
	- Fix resolve of names that use a mix of public and private addresses.
	- iana portlist update.
	- Fix makedist for new svn for -d option.
	- unbound.h header file has UNBOUND_VERSION_MAJOR define.
	- Fix windows RSRC version for long version numbers.

21 March 2013: Wouter
	- release 1.4.20
	- trunk has 1.4.21
	- committed libunbound version 4:1:2 for binary API updated in 1.4.20
	- install copy of unbound-control.8 man page for unbound-control-setup

14 March 2013: Wouter
	- iana portlist update.
	- tag 1.4.20rc1

12 March 2013: Wouter
	- Fixup makedist.sh for windows compile.

11 March 2013: Wouter
	- iana portlist update.
	- testcode/ldns-testpkts.c check for makedist is informational.

15 February 2013: Wouter
	- fix defines in lookup3 for bigendian bsd alpha

11 February 2013: Wouter
	- Fixup openssl_thread init code to only run if compiled with SSL.

7 February 2013: Wouter
	- detect endianness in lookup3 on BSD.
	- add libunbound.ttl at end of result structure, version bump for
	  libunbound and binary backwards compatible, but 1.4.19 is not
	  forward compatible with 1.4.20.
	- update iana port list.

30 January 2013: Wouter
	- includes and have_ssl fixes for nss.

29 January 2013: Wouter
	- printout name of zone with duplicate fwd and hint errors.

28 January 2013: Wouter