@@ -1,3 +1,7 @@
+11 April 2013: Wouter
+	- Fix queries leaking up for stubs and forwards, if the configured
+	  nameservers all fail to answer.
+
 10 April 2013: Wouter
 	- code improve for minimal responses, small speed increase.
 
